Removed unneccessary 3px space at bottom of screen This had been submitted previously to fix a double scrollbar on message log. No longer required.

--- a/client/Components/GameBoard/GameBoard.scss
+++ b/client/Components/GameBoard/GameBoard.scss
@@ -6,7 +6,7 @@
 
 .game-board {
     position: absolute;
-    bottom: 3px;
+    bottom: 0;
     left: 0;
     right: 0;
     top: $navbar-height;
@@ -80,7 +80,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    justify-content: space-between;    min-height: 0;
+    justify-content: space-between;
+    min-height: 0;
 }
 
 .player-board {
